# Zamazenta

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
scripts/: nso.py
